# X-space-downloader

./: .gitignore  DESCRIPTION.md  DESCRIPTION_TEMPLATE.md  FIRST_UI_VERSION.md  PROJECT_MASTER_PROMPT_V2.md  PROJECT_MASTER_PROMT.md  README.md  TRISCRIPTION_VERSION.md  pyproject.toml  requirements.txt  run_web.py
.claude/: settings.local.json
analysis/: summarizer.py
space_downloader/: __init__.py  audio_merger.py  cli.py  exceptions.py  hls_parser.py  metadata.py  models.py  segment_downloader.py  twitter_api.py  utils.py
tests/: test_hls_parser.py  test_segment_downloader.py  test_utils.py
transcription/: transcriber.py  transcript_cleaner.py
web_app/: downloader_service.py  main.py  routes.py
web_app/downloads/f706114c/segments/: seg_00d3bdf2.aac  seg_017b0c69.aac  seg_01c922b9.aac  seg_02ff1620.aac  seg_04feb85e.aac  seg_054eee66.aac  seg_0579d6cd.aac  seg_070c8419.aac  seg_076c6d9d.aac  seg_0cb173a8.aac  seg_0f3ddfe2.aac  seg_14d4d4df.aac  seg_15aa38d7.aac  seg_16034565.aac  seg_17399a02.aac  seg_1a1481e4.aac  seg_1b5903e0.aac  seg_1d17e668.aac  seg_1d1d0a0d.aac  seg_1e4b8508.aac  seg_1edcf41c.aac  seg_22acd20c.aac  seg_22bb7949.aac  seg_2594542a.aac  seg_25d236eb.aac  seg_25fdcba1.aac  seg_26ad968d.aac  seg_2788a41c.aac  seg_28428194.aac  seg_29047fc4.aac  seg_2b3d6ca7.aac  seg_2d989e5f.aac  seg_32921eed.aac  seg_33daa2ff.aac  seg_33e23744.aac  seg_346e73c8.aac  seg_373976b5.aac  seg_3752415f.aac  seg_37fa0d72.aac  seg_3c34d6bb.aac  (+132 more)
web_app/static/: script.js  styles.css
web_app/templates/: index.html
