[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "space-downloader"
version = "1.0.0"
description = "Professional CLI tool for downloading Twitter/X Spaces audio"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["twitter", "x", "spaces", "audio", "downloader", "hls"]
dependencies = [
    "aiohttp>=3.9.0",
    "m3u8>=3.5.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
space-downloader = "space_downloader.cli:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["space_downloader"]
